--- a/index.html
+++ b/index.html
@@ -445,5 +445,58 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-button">
+          <svg class="modal-close-icon" width="8" height="8" >
+            <use href="./images/modal-icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form >
+          <div class="modal-field">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="modal-input-wrap">
+              <input id="user-name" type="text" name="user-name" class="modal-input">
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/modal-icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-tel" class="modal-label">Phone</label>
+            <div class="modal-input-wrap">
+              <input id="user-tel" name="user-tel" type="tel" class="modal-input">
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/modal-icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="modal-input-wrap">
+              <input id="user-email" name="user-email" type="email" class="modal-input">
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/modal-icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-textarea-field">
+            <label for="user-comment" class="modal-label">Comment</label>
+            <textarea placeholder="Text input" name="user-comment" id="user-comment" class="modal-textarea"></textarea>
+          </div>
+          <div class="modal-check-field">
+            <input id="user-privacy" value="true" type="checkbox" class="modal-check-input visually-hidden" >
+            <label for="user-privacy" class="modal-check-label">
+              <span class="checkbox">
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/modal-icons.svg#icon-Check"></use>
+                </svg>
+              </span>I accept the terms and conditions of the <a href="" class="check-link">Privacy Policy</a></label>
+          </div>
+          <button type="submit" class="modal-send-button">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
