--- a/index.html
+++ b/index.html
@@ -443,6 +443,19 @@
             </li>
           </ul>
         </div>
+       <div class="footer-form-wrap">
+        <p class="footer-form-title">Subscribe</p>
+        <form class="footer-form">
+          <label class="footer-label">
+            <input placeholder="E-mail" type="email" class="footer-input">
+          </label>
+        <button type="submit" class="footer-form-button">Subscribe
+          <svg class="footer-form-icon" width="24" height="24">
+            <use href="./images/modal-icons.svg#icon-Send"></use>
+          </svg>
+        </button>
+        </form>
+       </div> 
       </div>
     </footer>
     <div class="backdrop">
